# vkpj

./: .gitignore  CMakeLists.txt  README.md
CMake/: Findstb.cmake
src/: CMakeLists.txt  app.cpp  app.h  app.hpp  image_loader.cpp  image_loader.hpp  image_saver.cpp  image_saver.hpp  imgui_system.cpp  imgui_system.hpp  input_manager.cpp  input_manager.hpp  main.cpp  platform.cpp  platform.h  platform.hpp  read_binary.cpp  read_binary.hpp  rmbg.cpp  rmbg.hpp  threadpool.cpp  threadpool.hpp  vertex.hpp
src/batch/: batch_processor.cpp  batch_processor.hpp
src/core/: buffer.cpp  buffer.hpp  commandbuffer.cpp  commandbuffer.hpp  commandpool.cpp  commandpool.hpp  constant.hpp  descriptor_layout.cpp  descriptor_layout.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  glfw_surface.cpp  glfw_surface.hpp  instance.cpp  instance.h  instance.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp
src/effects/: effect.cpp  effect.hpp  effect_param.hpp  effect_registry.cpp  effect_registry.hpp
src/image/: image.cpp  image.hpp  sampler.cpp  sampler.hpp
src/pipeline/: compute_pipeline.cpp  compute_pipeline.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/shaders/: affine_transformation.slang  brightness_contrast.slang  canny.slang  chromatic_aberration.slang  exposure.slang  gaussian_blur.slang  gaussian_noise.slang  grayscale.slang  hsl.slang  lens_distortion.slang  mask.slang  median_filter.slang  pseudo_median_filter.slang  salt_and_pepper.slang  sepia.slang  shader_base.slang  sobel.slang  utils.slang  vignette.slang
